tests/compile-fail/serde_encoding_without_marker.stderr
error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/compile-fail/serde_encoding_without_marker.rs:47:13
   |
47 | fn main() {}
   |             ^ consider adding a `main` function to `$DIR/tests/compile-fail/serde_encoding_without_marker.rs`

error[E0277]: the trait bound `HexString: serde::Serialize` is not satisfied
  --> tests/compile-fail/serde_encoding_without_marker.rs:18:35
   |
18 |     let _ = serde_json::to_string(&hex);
   |             --------------------- ^^^^ the trait `serde_core::ser::Serialize` is not implemented for `HexString`
   |             |
   |             required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `HexString` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`

error[E0277]: the trait bound `Base64String: serde::Serialize` is not satisfied
  --> tests/compile-fail/serde_encoding_without_marker.rs:28:35
   |
28 |     let _ = serde_json::to_string(&b64);
   |             --------------------- ^^^^ the trait `serde_core::ser::Serialize` is not implemented for `Base64String`
   |             |
   |             required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Base64String` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`

error[E0277]: the trait bound `Bech32String: serde::Serialize` is not satisfied
  --> tests/compile-fail/serde_encoding_without_marker.rs:38:35
   |
38 |     let _ = serde_json::to_string(&bech32);
   |             --------------------- ^^^^^^^ the trait `serde_core::ser::Serialize` is not implemented for `Bech32String`
   |             |
   |             required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Bech32String` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`
